wacc/test/golden/syntaxErr.while.whileNodo
# while missing opening do

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  while false
    skip
  done
end


Syntax error in test/wacc_examples/invalid/syntaxErr/while/whileNodo.wacc (line 13, column 5):
unexpected keyword "skip"
expected binary operator or do
the condition of a while loop must be closed with `do`

>   while false
>     skip
>     ^^^^
>   done

